# new_groq_ai

./: .replit  app.py  pyproject.toml  replit.nix
.streamlit/: config.toml
api/: main.py
api/routers/: analysis.py  auth.py  strategies.py
api/services/: __init__.py  agent_manager.py  domain_agent.py  groq_client.py  llm_wrapper.py  news_fetcher.py  portfolio_agent.py  rag_utils.py
api/utils/: __init__.py  utils.py
attached_assets/: Pasted-INFO-Will-watch-for-changes-in-these-directories-home-runner-workspace-INFO-Uvicorn-1742128106308.txt  agent_manager.py  app_streamlit.py  book_learning.py  chromadb_store.py  domain_agent.py  generic_advice_agent.py  groq_client.py  llm_wrapper.py  main.py  news_fetcher.py  portfolio_agent.py  rag_advice_with_books.py  rag_utils.py  utils.py  yashShahAIML.docx
database/: database.py  models.py
utils/: retry.py  stock_data.py
